# sparkle-duck-shared

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: design.md  integration.md
scripts/: package.json
scripts/lib/: cleanup-utils.mjs  cli-utils.mjs  command-utils.mjs  config-utils.mjs  flash-utils.mjs  index.mjs  partition-utils.mjs  remote-utils.mjs  rootfs-utils.mjs  ssh-utils.mjs  wifi-utils.mjs
wifi-provisioner/: Cargo.toml  README.md
wifi-provisioner/src/: ble.rs  improv.rs  lib.rs  main.rs  protocol.rs  websocket.rs  wifi.rs
wifi-provisioner/systemd/: wifi-provisioner.service
wifi-provisioner/tests/: integration.rs
yocto/meta-pi-base/classes/: pi-base-image.bbclass
yocto/meta-pi-base/conf/: layer.conf
yocto/meta-pi-base/recipes-connectivity/wifi-provisioner/: wifi-provisioner-crates.inc  wifi-provisioner_0.1.0.bb  wifi-provisioner_git.bb
yocto/meta-pi-base/recipes-support/ab-boot/: ab-boot-manager.bb
yocto/meta-pi-base/recipes-support/ab-boot/files/: ab-boot-manager  ab-update  ab-update-with-key
yocto/meta-pi-base/recipes-support/hostname-setup/: hostname-setup.bb
yocto/meta-pi-base/recipes-support/hostname-setup/files/: hostname-setup  hostname-setup.service
yocto/meta-pi-base/recipes-support/persistent-data/: persistent-data.bb
yocto/meta-pi-base/recipes-support/persistent-data/files/: persistent-data-bind.service  persistent-data-init
yocto/meta-pi-base/wic/: sdimage-ab.wks.in
